viatrading.com (archived on 2009-06-16)
{
  "alexa_rank": 195723,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4897,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.24,
  "homepage_snapshot_redirected_domain": "viatrading.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090312092110id_/http://www.viatrading.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090312092110id_/http%3A//viatrading.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "viatrading.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616221813id_/http%3A//www.viatrading.com/category.jhtm%3Fcid%3D333",
  "policy_title": "Your One Stop Shop for Customer Returns and Closeouts !!",
  "policy_url": "viatrading.com/category.jhtm?cid=333",
  "sha1": "1b4b68cae35e77e2915e01c9dff55e4c44086694",
  "simhash": 2695706300659999439,
  "simhash_updated": true,
  "site_hostname": "viatrading.com",
  "site_url": "http://viatrading.com",
  "smog": 13.97,
  "strict_updated": true,
  "timestamp": "20090616221813",
  "word_count": 830,
  "year": 2009
}

--- a/v/vi/via/viatrading.com.html
+++ b/v/vi/via/viatrading.com.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the viatrading.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217072436id_/http%3A//www.viatrading.com/category.jhtm%3Fcid%3D333) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viatrading.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616221813id_/http%3A//www.viatrading.com/category.jhtm%3Fcid%3D333) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<base href="http://www.viatrading.com/">
 <title>Your One Stop Shop for Customer Returns and Closeouts !!</title>
 <link href="assets/stylesheet.css" rel="stylesheet" type="text/css">
 
 <meta name="DESCRIPTION" content="Your Ones Stops Shop for Customer Returns &amp; Closeout Goods">
-<meta name="KEYWORDS" content="surplus,liquidation,closeouts,overstocks,salvage,wholesale clothing,liquidators,sell on ebay,clearance,wholesale apparel,wholesale electronics,selling on ebay,closeout,closeout merchandise,surplus electronics,surplus merchandise,ebay seller,liquidation merchandise,surplus clothing,flea market wholesale,flea market supply,overstock merchandise,salvage goods,department store returns,electronic palletsurplus,liquidation,closeouts,overstocks,salvage,wholesale clothing,liquidators,sell on ebay,clearance,wholesale apparel,wholesale electronics,selling on ebay,closeout,closeout merchandise,surplus electronics,surplus merchandise,ebay seller,liquidation merchandise,surplus clothing,flea market wholesale,flea market supply,overstock merchandise,salvage goods,department store returns,electronic pallet">
+<meta name="KEYWORDS" content="surplus,liquidation,closeouts,overstocks,salvage,wholesale clothing,liquidators,sell on ebay,clearance,wholesale apparel,wholesale electronics,selling on ebay,closeout,closeout merchandise,surplus electronics,surplus merchandise,ebay seller,liquidation merchandise,surplus clothing,flea market wholesale,flea market supply,overstock merchandise,salvage goods,department store returns,electronic pallet surplus,liquidation,closeouts,overstocks,salvage,wholesale clothing,liquidators,sell on ebay,clearance,wholesale apparel,wholesale electronics,selling on ebay,closeout,closeout merchandise,surplus electronics,surplus merchandise,ebay seller,liquidation merchandise,surplus clothing,flea market wholesale,flea market supply,overstock merchandise,salvage goods,department store returns,electronic pallet">
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -16,6 +17,14 @@ var pageTracker = _gat._getTracker("UA-1342297-1");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
+<script language="JavaScript" type="text/javascript">
+<!-- Yahoo! Inc.
+var ysm_accountid  = "171KUJ9G9KK3OCQDL6M03HQVG5S";
+document.write("<SCR" + "IPT language='JavaScript' type='text/javascript' " 
++ "SRC=//" + "srv2.wa.marketingsolutions.yahoo.com" + "/script/ScriptServlet" + "?aid=" + ysm_accountid 
++ "></SCR" + "IPT>");
+// -->
+</script><script language="JavaScript" type="text/javascript" src="//srv2.wa.marketingsolutions.yahoo.com/script/ScriptServlet?aid=171KUJ9G9KK3OCQDL6M03HQVG5S"></script>
 
 </head>  
 <body>
@@ -25,21 +34,27 @@ pageTracker._trackPageview();
 <table border="0" cellpadding="0" cellspacing="0" class="site">
   <tbody><tr>
     <td>
-	  <table width="925" cellspacing="0" cellpadding="0" border="0" align="" summary="">
+	  <table border="0" cellpadding="0" cellspacing="0" class="site">
+  <tbody><tr>
+    <td>
+      <table width="925" cellspacing="0" cellpadding="0" border="0" align="" summary="">
     <tbody>
         <tr>
-            <td><img src="/assets/Image/Layout/newwebsitebanner2.jpg" width="926" height="113" border="0" usemap="#Map">
-<map name="Map" id="Map"><area shape="rect" coords="3,3,923,94" href="http://www.viatrading.com"><area shape="rect" coords="775,99,925,113" href="mailto:sales@viatrading.com?Subject=Information Request"></map> <map name="Map" id="Map">
-            <area shape="rect" coords="584,7,618,21" href="home.jhtm">
-            <area shape="rect" coords="626,9,683,19" href="account.jhtm">
-            <area shape="rect" coords="692,10,738,21" href="viewCart.jhtm">
-            <area shape="rect" coords="749,9,764,21" href="category.jhtm?cid=1">             </map></td>
+
+            <td><img src="https://www.viatrading.com/assets/Image/Layout/header_ws.jpg" width="926" height="129" border="0" usemap="#Map">
+<map name="Map" id="Map"><area shape="rect" coords="717,111,926,173" href="mailto:sales@viatrading.com?Subject=Information Request">
+<area shape="rect" coords="720,-2,828,22" href="viewCart.jhtm"><area shape="rect" coords="828,-10,957,19" href="account.jhtm"><area shape="rect" coords="-9,21,922,112" href="http://www.viatrading.com">
+</map></td>
         </tr>
     </tbody>
 </table>
-<br><b><font size="3" face="Arial" color="black">     <marquee scrolldelay="120" direction="left">Your One Stop Shop for Store Overstocks, Closeouts and Customer Returns!!!  Open 6 Days a Week!!! Monday-Friday 7am to 7pm- Saturdays 9am to 5pm!!! Open to the public! No Minimum Order! We ship nationwide and internationally! Purchase by the case, pallet, load or truckload! Drop-shipping available!</marquee></font></b>
+<br><b><font size="3" face="Arial" color="black">     <marquee scrolldelay="120" direction="left">Your One Stop Shop for Store Overstocks,
+Closeouts and Customer Returns!!!  Open 6 Days a Week!!! Monday-Friday 7am
+to 7pm- Saturdays 9am to 5pm!!! Open to the public! No Minimum Order! We
+ship nationwide and internationally! Purchase by the case, pallet, load or
+truckload! Drop-shipping available!</marquee></font></b>
 
-
+<br>
 	  
 
 <p><map name="FPMap0">
@@ -59,7 +74,7 @@ pageTracker._trackPageview();
 <area shape="rect" coords="605,42,719,62" href="category.jhtm?cid=334">
 <area shape="rect" coords="727,42,874,55" href="category.jhtm?cid=383">
 </map>
-<img border="0" src="http://www.viatrading.com/assets/Image/Layout/navbar2.jpg" usemap="#FPMap0"></p>
+<img border="0" src="https://www.viatrading.com/assets/Image/Layout/navbar2.jpg" usemap="#FPMap0"></p>
 
 
 
@@ -70,50 +85,40 @@ pageTracker._trackPageview();
 
 
 <td valign="top" class="leftbar">
-<br>
-<center><a href="http://www.viatrading.com/viewList.jhtm"><img border="0" src="/assets/Image/Layout/loginbutton.gif"></a>&nbsp;<a href="http://www.viatrading.com/account.jhtm"><img border="0" src="/assets/Image/Layout/accountbutton.gif"></a><br></center>
-
+<p>&nbsp;</p>
+<center><a href="http://www.viatrading.com/viewList.jhtm"><img border="0" src="/assets/Image/Layout/loginbutton.gif" alt=""></a>&nbsp;<a href="http://www.viatrading.com/account.jhtm"><img border="0" src="/assets/Image/Layout/accountbutton.gif" alt=""></a><br>
+</center>
 <form action="search.jhtm">
     <div align="center">
-    <p>       <input type="text" name="keywords" size="18"> <br>
-    </p>
+    <p><input type="text" size="18" name="keywords"></p>
     <p><input type="submit" value="Search"> <u><br>
     </u></p>
     <u>    </u></div>
 </form>
-<!-- BEGIN: Constant Contact Standard Email List Button -->
-<div align="center">
-<table border="0" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td><img src="http://img.constantcontact.com/ui/images/visitor/bevel_tl_blue.gif" width="6" height="6" alt=""></td>
-<td background="http://img.constantcontact.com/ui/images/visitor/bevel_bg_top_blue.gif"> </td>
-<td><img src="http://img.constantcontact.com/ui/images/visitor/bevel_tr_blue.gif" width="6" height="6" alt=""></td>
-</tr>
-<tr>
-<td background="http://img.constantcontact.com/ui/images/visitor/bevel_bg_left_blue.gif"></td>
-<td bgcolor="#003399"><a href="http://visitor.constantcontact.com/d.jsp?m=1011066213286&amp;p=oi" target="_blank" style="text-decoration:none; font-weight: bold;  font-family:Arial,Helvetica,sans-serif; font-size:13px; color:#FFFFFF;">Join Email List</a></td>
-<td background="http://img.constantcontact.com/ui/images/visitor/bevel_bg_right_blue.gif"></td>
-</tr>
-<tr>
-<td><img src="http://img.constantcontact.com/ui/images/visitor/bevel_bl_blue.gif" width="6" height="6" alt=""></td>
-<td background="http://img.constantcontact.com/ui/images/visitor/bevel_bg_bottom_blue.gif"> </td>
-<td><img src="http://img.constantcontact.com/ui/images/visitor/bevel_br_blue.gif" width="6" height="6" alt=""></td>
-</tr>
-</tbody></table>
-</div>
-<!-- END: Constant Contact Standard Email List Button -->
-<br>
-<center><!-- live2support.com tracking codes starts --><div id="l2s_trk" style="z-index:99;visibility:hidden;"><a href="http://live2support.com"><font size="1">Live chat hosted software</font></a></div><script language="JavaScript">
+<p style="text-align: center;">&nbsp;<a href="http://visitor.constantcontact.com/d.jsp?m=1011066213286&amp;p=oi"><strong> </strong><input width="123" type="image" height="29" src="/assets/Image/Layout/email.jpg"></a></p><a href="http://visitor.constantcontact.com/d.jsp?m=1011066213286&amp;p=oi">
+</a><center><a href="http://visitor.constantcontact.com/d.jsp?m=1011066213286&amp;p=oi"></a><br>
+<center><!-- live2support.com tracking codes starts -->
+<div style="z-index: 99; visibility: hidden;" id="l2s_trk"><a href="http://live2support.com"><font size="1">Live chat hted software</font></a></div>
+<script language="JavaScript">
  var l2s_pht=escape(location.protocol); if(l2s_pht.indexOf("http")==-1) l2s_pht='http:'; function l2s_load() { document.write('<SCR'+'IPT LANGUAGE ="JavaScr'+'ipt" SRC="'+unescape(l2s_pht)+'//live2support.com/js/lsjs1.php?stid=2114"  defer=true>'+'</SCR'+'IPT>');  } 
-l2s_load(); </script><script language="JavaScript" src="https://live2support.com/js/lsjs1.php?stid=2114" defer="true"></script>
-<!-- live2support.com tracking codes closed --></center><br>
+l2s_load(); </script><script language="JavaScript" src="https://live2support.com/js/lsjs1.php?stid=2114" defer="true"></script> <!-- live2support.com tracking codes closed --></center><br>
 <center><a href="javascript:window.external.AddFavorite('http://www.viatrading.com', 'Your One Stop Shop for Store Overstocks and Customer Returns')"><font color="white">Add ViaTrading to Favorites </font></a></center><br>
+</center>
 
 
 
 
 
 
+  <div>
+	<a href="category.jhtm?cid=395" class="leftbar_catLink">
+	
+	  
+	  WE ARE HIRING!
+	
+	</a>
+  </div>
+  
 
   <div class="leftbar_catLink_nonlink">
 	
@@ -122,6 +127,16 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
 	  <font color="yellow">........Shop by Category........</font>
 	
 	
+  </div>
+  
+
+  <div>
+	<a href="category.jhtm?cid=284" class="leftbar_catLink">
+	
+	  
+	  <b>SPECIALS</b>
+	
+	</a>
   </div>
   
 
@@ -156,36 +171,6 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
   
 
   <div>
-	<a href="category.jhtm?cid=368" class="leftbar_catLink">
-	
-	  
-	  <b>HOME &amp; KITCHEN</b>
-	
-	</a>
-  </div>
-  
-
-  <div>
-	<a href="category.jhtm?cid=3" class="leftbar_catLink">
-	
-	  
-	  <b>TOOLS</b>
-	
-	</a>
-  </div>
-  
-
-  <div>
-	<a href="category.jhtm?cid=4" class="leftbar_catLink">
-	
-	  
-	  <b>CLOTHING</b>
-	
-	</a>
-  </div>
-  
-
-  <div>
 	<a href="category.jhtm?cid=362" class="leftbar_catLink">
 	
 	  
@@ -206,10 +191,40 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
   
 
   <div>
+	<a href="category.jhtm?cid=368" class="leftbar_catLink">
+	
+	  
+	  <b>HOME &amp; KITCHEN</b>
+	
+	</a>
+  </div>
+  
+
+  <div>
 	<a href="category.jhtm?cid=6" class="leftbar_catLink">
 	
 	  
 	  <b>SHOES</b>
+	
+	</a>
+  </div>
+  
+
+  <div>
+	<a href="category.jhtm?cid=3" class="leftbar_catLink">
+	
+	  
+	  <b>TOOLS</b>
+	
+	</a>
+  </div>
+  
+
+  <div>
+	<a href="category.jhtm?cid=4" class="leftbar_catLink">
+	
+	  
+	  <b>CLOTHING</b>
 	
 	</a>
   </div>
@@ -256,20 +271,10 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
   
 
   <div>
-	<a href="category.jhtm?cid=12" class="leftbar_catLink">
+	<a href="category.jhtm?cid=391" class="leftbar_catLink">
 	
 	  
-	  <b>EUROPEAN SECTION</b>
-	
-	</a>
-  </div>
-  
-
-  <div>
-	<a href="category.jhtm?cid=10" class="leftbar_catLink">
-	
-	  
-	  <b>ONE TIME LOTS</b>
+	  <b>PREFFERED VENDOR SECTION</b>
 	
 	</a>
   </div>
@@ -410,6 +415,16 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
 	
 	  
 	  <b>AFFILIATE PROGRAM</b>
+	
+	</a>
+  </div>
+  
+
+  <div>
+	<a href="category.jhtm?cid=392" class="leftbar_catLink">
+	
+	  
+	  <b>Link Exchange</b>
 	
 	</a>
   </div>
@@ -566,6 +581,7 @@ l2s_load(); </script><script language="JavaScript" src="https://live2support.com
 
 
 
+
 <table border="0" cellpadding="0" cellspacing="0" class="categoryHtml">
   <tbody><tr>
     <td><p><span style="font-size: large;"><b>Privacy Policy Statement</b></span><br>
@@ -651,6 +667,11 @@ If you feel that this site does not follow its stated Privacy Policy, you may co
 
 
 
+
+
+
+
+
     
   
 		  </td>
@@ -659,10 +680,11 @@ If you feel that this site does not follow its stated Privacy Policy, you may co
 
 		</tr>
 	  </tbody></table>
-	  <div style="text-align:right;">Powered By WebJaguar Ecommerce &amp; Shopping Cart Solutions by <a href="http://www.advancedemedia.com" target="_blank">AdvancedEMedia.com</a></div>
+	  <center><b>Copyright © 2009 Via Trading Corporation. All rights reserved. </b></center>
+<div style="text-align: center;"><b>Powered By WebJaguar Ecommerce &amp; Shopping Cart Solutions by <a target="_blank" href="http://www.advancedemedia.com">AdvancedEMedia.com</a></b></div>
 	</td>
   </tr>
 </tbody></table>
 
 
-</body></html>
+</td></tr></tbody></table></body></html>
