--- a/i/il/ilo/iloveallaccess.com.html
+++ b/i/il/ilo/iloveallaccess.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the iloveallaccess.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216065623id_/http%3A//www.iloveallaccess.com/index.php%3Ffile%3Dc-privpol) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iloveallaccess.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616223645id_/http%3A//www.iloveallaccess.com/index.php%3Ffile%3Dc-privpol) for the most accurate reproduction.-->
 
 <html><head>
 <title>ILoveAllAccess.Com | Where True Fans Get Tickets!</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="keywords" content="VIP, tickets, concert tickets, ticket package, Dancing with the Stars-2009, Eagles-2009, Fleetwood Mac, Neil Diamond, New Kids On The Block">
-<meta name="description" content="I Love All Access: The Ultimate VIP Concert Ticket Resource.  Get VIP ticket packages for artists like Dancing with the Stars-2009, Eagles-2009, Fleetwood Mac, Neil Diamond, and New Kids On The Block">
+<meta name="keywords" content="VIP, tickets, concert tickets, ticket package, Can't Stop Rockin, Chris Isaak, Creed, David Archuleta, Def Leppard, Eagles-2009, Fleetwood Mac, Godsmack, Journey, Miley Cyrus, New Kids On The Block, Steely Dan">
+<meta name="description" content="I Love All Access: The Ultimate VIP Concert Ticket Resource.  Get VIP ticket packages for artists like Can't Stop Rockin, Chris Isaak, Creed, David Archuleta, Def Leppard, Eagles-2009, Fleetwood Mac, Godsmack, Journey, Miley Cyrus, New Kids On The Block, and Steely Dan">
 <link rel="shortcut icon" href="favicon.ico">
 <script language="Javascript1.2" src="js/header.js"></script>
 <script language="Javascript1.2" src="js/openartist.js"></script>
@@ -64,11 +64,18 @@
             </td>
             <td align="center" valign="middle" class="PaddingLight">
 							<select name="srch_opt" class="Select130">
-								<option label="Dancing with the Stars 2008-2009" value="82">Dancing with the Stars 2008-2009</option>
+								<option label="Can't Stop Rockin" value="86">Can't Stop Rockin</option>
+<option label="Chris Isaak" value="90">Chris Isaak</option>
+<option label="Creed" value="93">Creed</option>
+<option label="David Archuleta" value="92">David Archuleta</option>
+<option label="Def Leppard" value="87">Def Leppard</option>
 <option label="Eagles 2008-2009" value="72">Eagles 2008-2009</option>
 <option label="Fleetwood Mac 2009" value="84">Fleetwood Mac 2009</option>
-<option label="Neil Diamond" value="77">Neil Diamond</option>
+<option label="Godsmack" value="89">Godsmack</option>
+<option label="Journey" value="95">Journey</option>
+<option label="Miley Cyrus" value="91">Miley Cyrus</option>
 <option label="New Kids On The Block" value="78">New Kids On The Block</option>
+<option label="Steely Dan" value="96">Steely Dan</option>
 
               </select>
             </td>
