responsemagic.com (archived on 2009-06-16)
{
  "alexa_rank": 101407,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8251,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.9,
  "homepage_snapshot_redirected_domain": "responsemagic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090227072927id_/http://www.responsemagic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090227072927id_/http%3A//responsemagic.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "responsemagic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616235844id_/http%3A//www.responsemagic.com/privacyPolicy.php",
  "policy_title": ".: Response Magic :. Professional Autoresponder + Lead Management + Contact Manager",
  "policy_url": "responsemagic.com/privacyPolicy.php",
  "sha1": "bb9edb837c36074c19fd9cb383f32807d074e606",
  "simhash": 3819069174938723372,
  "simhash_updated": false,
  "site_hostname": "responsemagic.com",
  "site_url": "http://responsemagic.com",
  "smog": 16.49,
  "strict_updated": false,
  "timestamp": "20090616235844",
  "word_count": 1341,
  "year": 2009
}

--- a/r/re/res/responsemagic.com.html
+++ b/r/re/res/responsemagic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the responsemagic.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216015622id_/http%3A//responsemagic.com/privacyPolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the responsemagic.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616235844id_/http%3A//www.responsemagic.com/privacyPolicy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>.: Response Magic :. Professional Autoresponder + Lead Management + Contact Manager</title>
@@ -313,12 +313,23 @@ function MM_preloadImages() { //v3.0
 	  </td>
   </tr>
   <tr> 
-    <td colspan="2" align="center" class="mainFooter"><br> © 2008 
+    <td colspan="2" align="center" class="mainFooter"><br> © 2005-2009 
       Response Magic- A division of <a href="http://www.platinumsynergy.com" target="_blank" class="footer">The 
       Platinum Synergy Group Inc.</a><br>
       All Rights Reserved. Content from this website should not be duplicated 
-      without permission </td>
-  </tr>
+      without permission 
+  <font face="arial" size="1"><br>
+	Network Marketing Resources:</font><font face="arial" color="#000000" size="1">: 
+	<a href="http://www.homeofficepro.net/">Network Marketing Software</a> -
+<a href="http://www.homeofficepro.net/mlm-software.php">MLM software</a> -
+<a href="http://www.homeofficepro.net/direct-marketing-solutions.php">direct 
+marketing software</a> - <a href="http://www.homeofficepro.net/mlm-software.php">mlm system</a></font>
+	<font face="Arial" size="1">-
+<a href="http://www.replicatingwebsite.com">Replicating Websites</a> </font>        
+      
+      </td>
+
+</tr>
 </tbody></table>
 
 
