--- a/s/st/sta/stagevu.com.html
+++ b/s/st/sta/stagevu.com.html
@@ -1,17 +1,22 @@
-<!--The following is the downloaded HTML source of the stagevu.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218064527id_/http%3A//stagevu.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stagevu.com privacy policy that was archived on 2009-06-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090617002157id_/http%3A//stagevu.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Privacy Policy - Stagevu: Your View</title>
 	<link rel="stylesheet" type="text/css" href="http://stagevu.com/includes/yuireset.css">
 	<link rel="stylesheet" type="text/css" href="http://stagevu.com/includes/css.css">
-	<link rel="shortcut icon" href="http://stagevu.com/favicon.ico" type="image/x-icon">
-	<script src="http://stagevu.com/includes/json.js" type="text/javascript"></script>
-	<script src="http://stagevu.com/includes/jquery.js" type="text/javascript"></script>
-	<script src="http://stagevu.com/includes/jqueryforms.js" type="text/javascript"></script>
-	<script src="http://stagevu.com/includes/js.js" type="text/javascript"></script>
-	<script src="http://stagevu.com/includes/jtip.js" type="text/javascript"></script>
 
+	<link rel="stylesheet" type="text/css" href="http://stagevu.com/includes/white.css">
+	
+	<link rel="shortcut icon" href="http://stagevu.com/favicon.ico" type="image/x-icon">
+	<script src="http://stagevu.com/includes/all.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+	var ip = '67.202.55.193';
+	var bgcolour = 'f';
+	var boxcolour = 'd';
+	var searchcolour = {		1: 'd'		, 2: 'b'	};
+	</script>
 	<meta name="robots" content="index,follow">
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	
@@ -21,7 +26,10 @@
 
 
 <div id="loading"><img src="http://stagevu.com/img/loading.gif" alt=""> Loading</div>
-<div class="center"><div id="notice"></div></div>
+<div class="center"><div id="notice">
+<table>
+<colgroup span="2"><col><col width="36px"></colgroup>
+<tbody><tr><td id="noticetext"></td><td class="textright"><a href="#" onclick="clearTimeout(noticetimeout); noticetimeout = null; notice(); return false;"><img src="http://stagevu.com/img/close.png" alt="Close" id="noticeimg"></a></td></tr></tbody></table></div></div>
 
 <div id="topheader">
 
@@ -29,37 +37,39 @@
 			<a href="#" onclick="toggleuser(); return false;">Login</a>
 		<a href="http://stagevu.com/register">Sign up</a>
 		</div>
+	<div id="themelinks">
+	<strong>Select a theme:</strong> White | <a href="#" onclick="changetheme('black'); return false;">Black</a>	</div>
 	<div id="user">
 		<p class="floatright"><a href="#" onclick="toggleuser(); return false;">Hide</a></p>
 		<h2>Login</h2>
-		<form id="loginform" action="http://stagevu.com/ajax/login.php" method="post">
-		<table class="floatcenter">
-			<colgroup span="2">
-				<col width="100px">
-				<col width="150px">
-			</colgroup>
-			<tbody><tr>
-				<td><label for="un" class="yellow floatright">Username</label></td>
-				<td><input name="un" id="un" type="text" class="text" maxlength="30"></td>
-			</tr>
-			<tr>
-				<td><label for="pw" class="yellow floatright">Password</label></td>
-				<td><input name="pw" id="pw" type="password" class="text" maxlength="255"></td>
-			</tr>
-			<tr><td colspan="2"><input type="submit" class="button floatright" value="Log in"><a href="http://stagevu.com/forgot" style="margin-top: 6px;">Recover account/Reactivate</a></td></tr>
-			<tr><td colspan="2" id="loginmessage"></td></tr>
-		</tbody></table>
-		</form>
+  
+  <form id="loginform" action="http://stagevu.com/ajax/login.php" method="post">
+  <table class="logintable">
+  	<colgroup span="2">
+  		<col width="100px">
+  		<col width="150px">
+  	</colgroup>
+  	<tbody><tr>
+  		<td><label for="un" class="yellow floatright">Username</label></td>
+  		<td><input name="un" id="un" type="text" class="text" maxlength="30"></td>
+  	</tr>
+  	<tr>
+  		<td><label for="pw" class="yellow floatright">Password</label></td>
+  		<td><input name="pw" id="pw" type="password" class="text" maxlength="255"></td>
+  	</tr>
+  	<tr><td colspan="2">
+  		<input type="submit" class="button floatright" value="Log in">
+  		<input name="shared" type="checkbox" class="checkbox valignmid" value="1">
+  		<span class="small">Don't remember me (shared computer)</span>
+  	</td></tr>
+  	<tr><td colspan="2"><a href="http://stagevu.com/forgot">Recover account/Reactivate</a></td></tr>
+  	<tr><td colspan="2" id="loginmessage"></td></tr>
+  </tbody></table>
+  </form>
 	</div>
 	
 	<div style="margin-top:5px">
-	<a href="http://stagevu.com/index"><img src="http://stagevu.com/img/title.gif" alt="StageVU" id="title" z=""></a>
-	<a href="http://stagevu.com/index" class="m">Home</a>
-	<a href="http://stagevu.com/videos" class="m">Videos</a>
-	<a href="http://stagevu.com/channels" class="m">Channels</a>
-	<a href="http://stagevu.com/forum" class="m">Forum</a>
-	<a href="http://stagevu.com/divxwebplayer" class="m">Player</a>
-	<a href="http://stagevu.com/upload" class="m yellow">Submit a video</a>
+	<a href="http://stagevu.com/index"><img src="http://stagevu.com/img/white/title.gif" alt="stagevu" id="title"></a><a href="http://stagevu.com/index" class="m">Home</a><a href="http://stagevu.com/videos" class="m">Videos</a><a href="http://stagevu.com/channels" class="m">Channels</a><a href="http://stagevu.com/forum" class="m">Forum</a><a href="http://stagevu.com/divxwebplayer" class="m">Player</a><a href="http://stagevu.com/upload" class="m yellow">Submit a video</a>
 	</div>
 </div>
 <div id="search">
@@ -72,83 +82,176 @@
 			<option value="Channels">Channels</option>
 			<option value="Tags">Tags</option>
 		</select>
-		<input type="image" src="http://stagevu.com/img/search.png" id="button">
+		<input type="image" src="http://stagevu.com/img/white/search.png" id="button">
 	</form>
 	<a href="#" onclick="togglesearch();return false;">Advanced search</a></div>
 
 <div id="content">
-	<div id="advsearch" style="display: none">
-	<form action="http://stagevu.com/search" method="get">
-	<table class="form">
-	<colgroup span="4">
+	<div id="overlay">&nbsp;</div>
+	<div id="sitemessage">
+	<a href="#" id="hideoverlay" onclick="$('#sitemessage, #overlay').fadeOut('slow')" class="floatright">Hide</a>
 
-		<col width="150px">
-		<col width="300px">
-		<col width="150px">
-		<col width="300px">
-	</colgroup>
-	<tbody><tr><td colspan="4"><h2>Advanced Search</h2></td></tr>
-	<tr>
-		<td class="textright"><label for="askeywords">Keywords</label></td>
-
-		<td><input name="keywords" id="askeywords" type="text" class="text" maxlength="120"></td>
-		<td class="textright"><label for="astags">Tags:</label><br><span class="small">Separate with commas</span></td>
-		<td><input name="tags" id="astags" type="text" class="text" maxlength="120"></td>
-	</tr>
-	<tr>
-		<td class="textright"><label for="assubmitter">Submitted by</label></td>
-		<td><input name="submitter" id="assubmitter" type="text" class="text" maxlength="30"></td>
-
-		<td class="textright"><label for="ascategory">Category</label></td>
-		<td><select name="category" id="ascategory">
-			<option value="">Any</option>
-			<option value="Animation">Animation</option>
-			<option value="Art">Art</option>
-			<option value="Blogs">Blogs</option>
-			<option value="Comedy">Comedy</option>
-			<option value="Educational">Educational</option>
-			<option value="Films and Movies">Films and Movies</option>
-			<option value="Games">Games</option>
-			<option value="Music">Music</option>
-			<option value="News and Politics">News and Politics</option>
-			<option value="Sports">Sports</option>
-			<option value="Television">Television</option>
-			<option value="Others">Others</option>
-		</select></td>
-	</tr>
-	<tr>
-		<td class="textright"><label for="asminmin">Minimum length</label></td>
-
-		<td><input name="minmin" id="asminmin" type="text" class="vartext" maxlength="4" size="4">:<input name="minsec" id="asminsec" type="text" class="vartext" maxlength="2" size="2"> (mm:ss)</td>
-		<td class="textright"><label for="asmaxmin">Maximum length (mm:ss)</label></td>
-		<td><input name="maxmin" id="asmaxmin" type="text" class="vartext" maxlength="4" size="4">:<input name="maxsec" id="asmaxsec" type="text" class="vartext" maxlength="2" size="2"> (mm:ss)</td>
-	</tr>
-	<tr>
-
-		<td class="textright"><label for="asminrating">Rating</label></td>
-		<td>From <select name="minrating" id="asminrating">
-			<option value="">Any</option>
-			<option value="1">1</option>
-			<option value="2">2</option>
-			<option value="3">3</option>
-
-			<option value="4">4</option>
-			<option value="5">5</option>
-		</select> to <select name="maxrating" id="asmaxrating">
-			<option value="">Any</option>
-			<option value="1">1</option>
-			<option value="2">2</option>
-
-			<option value="3">3</option>
-			<option value="4">4</option>
-			<option value="5">5</option>
-		</select></td>
-		<td colspan="2"><input type="submit" class="button floatright" value="Search"></td>
-	</tr>
-	</tbody></table>
-
-	</form>
 	</div>
+ 	<div id="advsearch" style="display: none">
+ 	<form action="http://stagevu.com/search" method="get">
+ 	<table class="form">
+ 	<colgroup span="4">
+ 
+ 		<col width="150px">
+ 		<col width="300px">
+ 		<col width="150px">
+ 		<col width="300px">
+ 	</colgroup>
+ 	<tbody><tr><td colspan="4"><h2>Advanced Search</h2></td></tr>
+ 	<tr>
+ 		<td class="textright"><label for="askeywords">Keywords</label></td>
+ 
+ 		<td><input name="keywords" id="askeywords" type="text" class="text" maxlength="120"></td>
+ 		<td class="textright"><label for="astags">Tags:</label><br><span class="small">Separate with commas</span></td>
+ 		<td><input name="tags" id="astags" type="text" class="text" maxlength="120"></td>
+ 	</tr>
+ 	<tr>
+ 		<td class="textright"><label for="assubmitter">Submitted by</label></td>
+ 		<td><input name="submitter" id="assubmitter" type="text" class="text" maxlength="30"></td>
+ 
+ 		<td class="textright"><label for="ascategory">Category</label></td>
+ 		<td><select name="category" id="ascategory">
+ 			<option value="">Any</option>
+ 			<option value="Animation">Animation</option>
+ 			<option value="Art">Art</option>
+ 			<option value="Blogs">Blogs</option>
+ 			<option value="Comedy">Comedy</option>
+ 			<option value="Educational">Educational</option>
+ 			<option value="Films and Movies">Films and Movies</option>
+ 			<option value="Games">Games</option>
+ 			<option value="Music">Music</option>
+ 			<option value="News and Politics">News and Politics</option>
+ 						<option value="Sports">Sports</option>
+ 			<option value="Television">Television</option>
+ 			<option value="Others">Others</option>
+ 		</select></td>
+ 	</tr>
+ 	<tr>
+ 		<td class="textright"><label for="asminmin">Minimum length</label></td>
+ 
+ 		<td><input name="minmin" id="asminmin" type="text" class="vartext" maxlength="4" size="4">:<input name="minsec" id="asminsec" type="text" class="vartext" maxlength="2" size="2"> (mm:ss)</td>
+ 		<td class="textright"><label for="asmaxmin">Maximum length</label></td>
+ 		<td><input name="maxmin" id="asmaxmin" type="text" class="vartext" maxlength="4" size="4">:<input name="maxsec" id="asmaxsec" type="text" class="vartext" maxlength="2" size="2"> (mm:ss)</td>
+ 	</tr>
+ 	<tr>
+ 
+ 		<td class="textright"><label for="asminrating">Rating</label></td>
+ 		<td>From <select name="minrating" id="asminrating">
+ 			<option value="">Any</option>
+ 			<option value="1">1</option>
+ 			<option value="2">2</option>
+ 			<option value="3">3</option>
+ 
+ 			<option value="4">4</option>
+ 			<option value="5">5</option>
+ 		</select> to <select name="maxrating" id="asmaxrating">
+ 			<option value="">Any</option>
+ 			<option value="1">1</option>
+ 			<option value="2">2</option>
+ 
+ 			<option value="3">3</option>
+ 			<option value="4">4</option>
+ 			<option value="5">5</option>
+ 		</select></td>
+ 		<td class="textright"><label for="aswidth">Minimum Resolution</label></td>
+ 		<td><input name="width" id="aswidth" type="text" class="vartext" maxlength="4" size="4"> (width) x <input name="height" id="asheight" type="text" class="vartext" maxlength="4" size="4"> (height)</td>
+ 	</tr>
+ 	<tr>
+ 		<td class="textright"><label for="language">Language</label></td>
+ 		<td><select name="language" class="text">
+ 			<option value="">Any</option>
+ 			<option value="English">English</option>
+ 			<option value="Arabic">Arabic</option>
+ 			<option value="Chinese (Mandarin)">Chinese (Mandarin)</option>
+ 			<option value="Chinese (Cantonese)">Chinese (Cantonese)</option>
+ 			<option value="French">French</option>
+ 			<option value="German">German</option>
+ 			<option value="Hindi">Hindi</option>
+ 			<option value="Japanese">Japanese</option>
+ 			<option value="Russian">Russian</option>
+ 			<option value="Spanish">Spanish</option>
+ 			<option value="Amharic">Amharic</option>
+ 			<option value="Arabic">Arabic</option>
+ 			<option value="Assamese">Assamese</option>
+ 			<option value="Azerbaijani">Azerbaijani</option>
+ 			<option value="Bengali">Bengali</option>
+ 			<option value="Bhojpuri">Bhojpuri</option>
+ 			<option value="Burmese">Burmese</option>
+ 			<option value="Cebuano">Cebuano</option>
+ 			<option value="Chinese (Cantonese)">Chinese (Cantonese)</option>
+ 			<option value="Chinese (Mandarin)">Chinese (Mandarin)</option>
+ 			<option value="Czech">Czech</option>
+ 			<option value="Dutch">Dutch</option>
+ 			<option value="English">English</option>
+ 			<option value="Filipino">Filipino</option>
+ 			<option value="French">French</option>
+ 			<option value="Fula">Fula</option>
+ 			<option value="Gan">Gan</option>
+ 			<option value="German">German</option>
+ 			<option value="Greek">Greek</option>
+ 			<option value="Gujarati">Gujarati</option>
+ 			<option value="Hakka">Hakka</option>
+ 			<option value="Hausa">Hausa</option>
+ 			<option value="Hindi">Hindi</option>
+ 			<option value="Hungarian">Hungarian</option>
+ 			<option value="Igbo">Igbo</option>
+ 			<option value="Indonesian">Indonesian</option>
+ 			<option value="Italian">Italian</option>
+ 			<option value="Japanese">Japanese</option>
+ 			<option value="Javanese">Javanese</option>
+ 			<option value="Kannada">Kannada</option>
+ 			<option value="Khmer">Khmer</option>
+ 			<option value="Korean">Korean</option>
+ 			<option value="Kurdish">Kurdish</option>
+ 			<option value="Language">Language</option>
+ 			<option value="Lao">Lao</option>
+ 			<option value="Madurese">Madurese</option>
+ 			<option value="Maithili">Maithili</option>
+ 			<option value="Malagasy">Malagasy</option>
+ 			<option value="Malay">Malay</option>
+ 			<option value="Malayalam">Malayalam</option>
+ 			<option value="Marathi">Marathi</option>
+ 			<option value="Nepali">Nepali</option>
+ 			<option value="Oriya">Oriya</option>
+ 			<option value="Oromo">Oromo</option>
+ 			<option value="Pashto">Pashto</option>
+ 			<option value="Persian">Persian</option>
+ 			<option value="Polish">Polish</option>
+ 			<option value="Portuguese">Portuguese</option>
+ 			<option value="Punjabi">Punjabi</option>
+ 			<option value="Romanian">Romanian</option>
+ 			<option value="Russian">Russian</option>
+ 			<option value="Serbo-Croatian">Serbo-Croatian</option>
+ 			<option value="Shona">Shona</option>
+ 			<option value="Sindhi">Sindhi</option>
+ 			<option value="Sinhalese">Sinhalese</option>
+ 			<option value="Somali">Somali</option>
+ 			<option value="Spanish">Spanish</option>
+ 			<option value="Sundanese">Sundanese</option>
+ 			<option value="Tamazight">Tamazight</option>
+ 			<option value="Tamil">Tamil</option>
+ 			<option value="Telugu">Telugu</option>
+ 			<option value="Thai">Thai</option>
+ 			<option value="Turkish">Turkish</option>
+ 			<option value="Ukrainian">Ukrainian</option>
+ 			<option value="Uzbek">Uzbek</option>
+ 			<option value="Vietnamese">Vietnamese</option>
+ 			<option value="Other/None">Other/None</option>
+ 		</select></td>
+ 		<td colspan="2"></td>
+ 	</tr>
+ 	<tr>
+ 		<td colspan="4"><input type="submit" class="button floatright" value="Search"></td></tr>
+ 	
+ 	</tbody></table>
+ 
+ 	</form>
+ 	</div>
 		<h1>Stagevu Privacy Policy</h1>
 		<p>This document outlines exactly what you are permitted and not permitted to do as an user of Stagevu. Note that by visiting Stagevu, you are an user of Stagevu and these rules apply to you. Using this site simply means visiting it, or downloading it.</p>
 		
@@ -175,7 +278,7 @@
 		</ul>
 		<p>These pieces of optional information will only be displayed on your <strong>profile page (<a href="http://stagevu.com/user/phsource">sample</a>)</strong>.</p>
 		
-		<p>Stagevu also runs <strong>3rd-party advertisements</strong> and <strong>statistics software</strong>. The information collected by these programs may include your IP address and various other non-personal information such as the city of your Internet Service Provider. This information will not be used to identify you personally.</p>
+		<p>Stagevu also runs <strong>3rd-party advertisements</strong> and <strong>statistics software</strong>. The information collected by these programs may include your IP address and various other non-personal information such as the city of your Internet Service Provider. In addition, your response to certain advertisements (e.g. by clicking on them) may cause the advertiser to profile you in a certain demographic. Rest assured that no personally-identifying information will be given to thrid-party ad servers.</p>
 		
 		<p>If you decide to to contact us, your email and name will remain confidential and be used solely for communicating with you regarding the subject of the contact.</p>
 
@@ -205,11 +308,14 @@
 
 <div id="footcont">
 	<div id="footer">
-		<div class="floatright small">Powered by the <a href="http://labs.divx.com/WebPlayer" style="margin: 0;">DivX© Web Player</a>. DivX is a registered trademark of DivX, Inc.</div>
+		<div class="floatright textright small" style="margin-right: 50px;">Powered by the <a href="http://labs.divx.com/WebPlayer" style="margin: 0;">DivX© Web Player</a>. DivX is a registered trademark of DivX, Inc.<br>Website by <a href="http://myrtlelime.com/index" style="margin: 0">Myrtlelime</a></div>
 		<a href="http://stagevu.com/privacy">privacy</a>
-		<a href="http://stagevu.com/contact">contact</a>
+		<a href="http://stagevu.com/terms">terms of use</a>
+		<a href="http://stagevu.com/help">contact</a>
+		<a href="http://stagevu.com/help">help</a>
 	</div>
 </div>
+
 
 
 
@@ -218,10 +324,12 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try {
 var pageTracker = _gat._getTracker("UA-1336767-4");
-pageTracker._initData();
 pageTracker._trackPageview();
-</script><!-- Start Quantcast tag -->
+} catch(err) {}
+</script>
+<!-- Start Quantcast tag -->
 <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 <script type="text/javascript">_qacct="p-11caysjOsgMsE";quantserve();</script>
 <noscript>
